--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,15 @@
         "harimayco/laravel-menu": "^1.3",
         "intervention/image": "^2.5",
         "jenssegers/date": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.4",
         "laravelcollective/html": "^6.0",
         "mcamara/laravel-localization": "^1.3",
+        "movemoveapp/laravel-dadata": "^1.0",
         "nicolaslopezj/searchable": "*",
-        "yajra/laravel-datatables-oracle": "~9.0",
-        "yajra/laravel-datatables-buttons": "~4.0"
+        "yajra/laravel-datatables-buttons": "~4.0",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
