--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "mcamara/laravel-localization": "^1.3",
         "movemoveapp/laravel-dadata": "^1.0",
         "nicolaslopezj/searchable": "*",
+        "pusher/pusher-php-server": "~4.0",
         "yajra/laravel-datatables-buttons": "~4.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
